기본 구조 폴더 정리 완료